*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-157.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-157.htm
@@ -17,7 +17,7 @@ signature.
 <ul>
   <li>Select the method in a Java view (e.g. Outline, Package Explorer, Members). 
   </li>
-  <li> Do one of the following to open the Modify Parameters refactoring wizard: 
+  <li> Do one of the following to open the Change Method Signature refactoring dialog: 
     <ul>
       <li> From the menu bar, select <strong>Refactor &gt; Change Method Signature 
         </strong> or </li>
@@ -37,7 +37,7 @@ signature.
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
        <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
-       <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
+       <a href="../reference/ref-117.htm">Refactoring dialogs</a><br>
        <a href="../reference/ref-23.htm">Refactoring preferences</a>
     </p>
     <p>
