--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-163.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-163.htm
@@ -35,10 +35,10 @@
         In the class in which the field is declared, read and write accesses can be direct or you can use getter and setter. 
         <ul>
           <li>
-            Select the <strong>use getter and setter</strong> radio button if you want the wizard to convert all these accesses to use getter and setter.
+            Select the <strong>use getter and setter</strong> radio button if you want the refactoring to convert all these accesses to use getter and setter.
           </li>
           <li>
-            Select the <strong>keep field reference</strong> radio button if you do not want the wizard to modify the current field accesses in the class in which the field is
+            Select the <strong>keep field reference</strong> radio button if you do not want the refactoring to modify the current field accesses in the class in which the field is
             declared.
           </li>
         </ul>
