--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-204.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-204.htm
@@ -42,7 +42,7 @@
 
     <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
      <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
-     <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
+     <a href="../reference/ref-117.htm">Refactoring dialogs</a><br>
      <a href="../reference/ref-23.htm">Refactoring preferences</a><br>
     </p>
 
