--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-205.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-205.htm
@@ -11,7 +11,7 @@
 
   <body>
     <h1>Parameters page</h1>
-    <img src="../images/tasks_205a.gif" width="393" height="260" alt="Parameters Page for the Rename Local Variable Refactoring Command"> 
+    <img src="../images/tasks_205a.gif" alt="Parameters Page for the Rename Local Variable Refactoring Command"> 
 
     <p>Parameters Page for the Rename Local Variable Refactoring Command</p>
 
@@ -21,8 +21,10 @@
       <li>If you do not want to update references to the renamed local variable, deselect the <span class="control"><span class="control">Update references to the renamed
       element</span></span> checkbox.</li>
 
-      <li>Click <span class="control"><span class="control">Next</span></span> to perform a quick refactoring, or click&nbsp;<span class="control"><span class=
-      "control">Finish</span></span> to perform a controlled refactoring.</li>
+      
+  <li>Click <span class="control"><span class="control">OK</span></span> to perform 
+    a quick refactoring, or click&nbsp;<span class="control"><span class=
+      "control">Preview</span></span> to perform a controlled refactoring.</li>
     </ul>
 
     <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
