--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-82.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-82.htm
@@ -18,7 +18,7 @@
     it in the Outline view and choosing <strong>Refactor</strong> &gt; <strong>Rename</strong> 
     from its pop-up menu. </li>
   <li> The Refactoring Parameters page prompts you for information necessary for 
-    the action. For example, the Rename Type Refactoring wizard asks you for a 
+    the action. For example, the Rename Type Refactoring dialog asks you for a 
     new name for the selected type. </li>
   <li> Provide the necessary data on the parameters page, and click <strong>OK</strong>. 
   </li>
@@ -35,7 +35,7 @@
     and <strong>Cancel</strong> buttons are enabled, and you are prevented from 
     carrying out the refactoring. If the problems are related to data provided 
     on the parameters page, click <strong>Back</strong> and attempt to remedy 
-    the problem. Otherwise, click <strong>Cancel</strong> to close the wizard. 
+    the problem. Otherwise, click <strong>Cancel</strong> to close the dialog. 
   </li>
   <li> If other kinds of problems were anticipated, you can click <strong>Continue</strong> 
     to acknowledge the problems. The refactoring is carried out, and the dialog 
@@ -60,7 +60,7 @@
     </p>
     <p>
       <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
-       <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
+       <a href="../reference/ref-117.htm">Refactoring dialogs</a><br>
        <a href="../reference/ref-23.htm">Refactoring preferences</a>
     </p>
     <p>
