--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-83.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-83.htm
@@ -18,7 +18,7 @@
         <strong>Refactor</strong> &gt; <strong>Rename</strong> from its pop-up menu.
       </li>
       <li>
-        The Refactoring Parameters page prompts you for information necessary for the action. For example, the Rename Type Refactoring wizard
+        The Refactoring Parameters page prompts you for information necessary for the action. For example, the Rename Type Refactoring dialog
         asks you for the new name for the selected type.
       </li>
       
@@ -41,7 +41,7 @@
         The Refactoring Preview page opens.
       </li>
       
-  <li> Click <strong>OK</strong> to execute the refactoring and close the wizard. 
+  <li> Click <strong>OK</strong> to execute the refactoring and close the dialog. 
   </li>
     </ol>
     <p>
@@ -64,7 +64,7 @@
     </p>
     <p>
       <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
-       <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
+       <a href="../reference/ref-117.htm">Refactoring dialogs</a><br>
        <a href="../reference/ref-23.htm">Refactoring preferences</a>
     </p>
     <p>
