--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-88.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-88.htm
@@ -13,25 +13,22 @@
     <h1>
       Parameters page
     </h1>
-    <img src="../images/tasks-27.gif" height="303" width="376" alt="Parameters page of the Extract Method refactoring wizard"> 
+    <img src="../images/tasks-27.gif" alt="Parameters page of the Extract Method refactoring dialog"> 
     <p>
       Extract Method Parameters Page
     </p>
-    <ul>
-      <li>
-        In the <strong>Method name</strong> field, type a name for the new method that will be extracted.
-      </li>
-      <li>
-        In the <strong>Access Modifier</strong> list, specify the method's visibility (public, default, protected, or private).
-      </li>
-      <li>
-        You can <strong>Add thrown runtime exceptions to method signature</strong> by selecting the corresponding checkbox.
-      </li>
-      <li>
-        Click <strong>Next</strong> to perform a quick refactoring, or click <strong>Finish</strong> to perform a controlled
-        refactoring.
-      </li>
-    </ul>
+    
+<ul>
+  <li> In the <strong>Method name</strong> field, type a name for the new method 
+    that will be extracted. </li>
+  <li> In the <strong>Access Modifier</strong> list, specify the method's visibility 
+    (public, default, protected, or private). </li>
+  <li> You can <strong>Add thrown runtime exceptions to method signature</strong> 
+    by selecting the corresponding checkbox. </li>
+  <li>You can rearrange and rename the pararameters for the new method.</li>
+  <li> Click <strong>OK</strong> to perform a quick refactoring, or click <strong>Preview</strong> 
+    to perform a controlled refactoring. </li>
+</ul>
     <p>
       Related Topics:
     </p>
