--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-97.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-97.htm
@@ -13,7 +13,7 @@
     <h1>
       Parameters page
     </h1>
-    <img src="../images/tasks-31.gif" height="256" width="344" alt="Parameters page of the Rename Method refactoring wizard"> 
+    <img src="../images/tasks-31.gif" alt="Parameters page of the Rename Method refactoring dialog"> 
     <p>
       Parameters Page for the Rename Method Refactoring Command
     </p>
@@ -24,9 +24,9 @@
       <li>
         If you do not want to update references to the renamed method, deselect the <strong>Update references to the renamed element</strong> checkbox.
       </li>
-      <li>
-        Click <strong>Next</strong> to perform a quick refactoring, or click <strong>Finish</strong> to perform a controlled refactoring.
-      </li>
+      
+  <li> Click <strong>OK</strong> to perform a quick refactoring, or click <strong>Preview</strong> 
+    to perform a controlled refactoring. </li>
     </ul>
     <p>
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
