--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-98.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-98.htm
@@ -40,7 +40,7 @@
         Select the parameter in the Java editor.
       </li>
       <li>
-        From the editor's pop-up menu, select <strong>Refactor</strong> &gt; <strong>Rename</strong> to open the Rename refactoring wizard.
+        From the editor's pop-up menu, select <strong>Refactor</strong> &gt; <strong>Rename</strong> to open the Rename refactoring dialog.
       </li>
     </ul>
     <p>
@@ -60,7 +60,7 @@
     </p>
     <p>
       <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
-       <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
+       <a href="../reference/ref-117.htm">Refactoring dialogs</a><br>
        <a href="../reference/ref-23.htm">Refactoring preferences</a>
     </p>
     <p>
