--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-99.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-99.htm
@@ -13,9 +13,9 @@
     <h1>
       Parameters page
     </h1>
-    <img src="../images/tasks-32.gif" height="418" width="347" alt="Parameters page of the Rename Method Parameters refactoring wizard"> 
+    <img src="../images/tasks-32.gif" alt="Parameters page of the Change Method Signature refactoring wizard"> 
     <p>
-      Parameters Page for the Rename Method Parameters Refactoring Command
+      Parameters Page for the Change Method Signature Refactoring Command
     </p>
     <ul>
       <li>
