--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-100.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-100.htm
@@ -46,7 +46,7 @@
     </p>
     <p>
       <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
-       <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
+       <a href="../reference/ref-117.htm">Refactoring dialog</a><br>
        <a href="../reference/ref-23.htm">Refactoring preferences</a>
     </p>
     <p>
