--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-169.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-169.htm
@@ -35,7 +35,7 @@
       <br>
        <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
        <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
-       <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
+       <a href="../reference/ref-117.htm">Refactoring dialogs</a><br>
        <a href="../reference/ref-23.htm">Refactoring preferences</a><br>
        <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
     </p>
