--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-216.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-216.htm
@@ -24,7 +24,7 @@ To convert an anonynous inner class to a nested class:
 </ul>
     <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"> <br>
      <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a> <br>
-     <a href="../reference/ref-117.htm">Refactoring wizard</a> <br>
+     <a href="../reference/ref-117.htm">Refactoring dialogs</a> <br>
      <a href="../reference/ref-23.htm">Refactoring preferences</a> 
     <p>
       <a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright (c) 2000, 2003 IBM Corporation and others. All Rights Reserved." border="0" height="14" width="324"></a>
