--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-80.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-80.htm
@@ -61,7 +61,7 @@
     </p>
     <p>
       <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
-       <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
+       <a href="../reference/ref-117.htm">Refactoring dialogs</a><br>
        <a href="../reference/ref-23.htm">Refactoring preferences</a>
     </p>
     <p>
