--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-87.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-87.htm
@@ -48,7 +48,7 @@
     </p>
     <p>
       <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
-       <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
+       <a href="../reference/ref-117.htm">Refactoring dialogs</a><br>
        <a href="../reference/ref-23.htm">Refactoring preferences</a><br>
        <a href="../reference/ref-154.htm">Extract method errors</a>
     </p>
