--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-90.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-90.htm
@@ -46,7 +46,7 @@
     <p>
       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
        <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
-       <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
+       <a href="../reference/ref-117.htm">Refactoring dialog</a><br>
        <a href="../reference/ref-23.htm">Refactoring preferences</a>
     </p>
     <p>
