--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-44.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-44.htm
@@ -22,10 +22,11 @@
       </li>
       <li>
         In the list pane of the Hierarchy view, make sure that the&nbsp;<strong><strong>Lock View and Show Members in Hierarchy</strong></strong> button is toggled on. This option
-        locks the current class in the method pane and shows only those classes in the upper view that implement the currently selected method of the locked class. You can tell
-        this option is turned on if, after you select a method, the Hierarchy view's title bar indicates that the view is &quot;Filtered&quot;. <img src=
-        "../images/tasks-8.gif" height="188" width="267" alt="Hierarchy view in Filtered Subtypes mode"><br>The methods of interest are shown in the upper pane. You can select any
-        method and open it in an editor.
+        locks the current class in the method pane and shows only those classes in the upper view that implement the currently selected method of the locked class. 
+        <p>
+        <img src="../images/tasks-8.gif" alt="Hierarchy view in Filtered Subtypes mode">
+        </p>
+        The methods of interest are shown in the upper pane. You can select any method and open it in an editor.
       </li>
     </ol>
      <em>Note: The selection might not show all members if a filter (such as <strong>Hide Fields</strong> or <strong>Hide Static Members</strong>) is active.<br>
