what's new text

--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -13,19 +13,8 @@
 <body>
 
 <h2>What's New in 2.1</h2>
-<p>[This section should make interesting reading for an end user of Eclipse 2.0
-who has just switched to 2.1 (or is contemplating switching). It should inform
-them the most interesting and most significant visible changes that came along
-with 2.1. The section should be complete, in that no interesting, significant,
-visible change should go unmentioned. It differs in tone from the Tips and
-Tricks section in that it only covers things that are new for 2.1, and that it
-only deals with things that users would feel like was a significant improvement.
-Each item should stand by itself, so that the items can be easily rearranged and
-subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p>
-<p>[This section is still preliminary. The material here is lifted from the M2 
-  through M5 &quot;New and Noteworthy&quot; bulletins.]</p>
-<p>[Formatting changes: add horizontal line between each item; change font and 
-  size throughout.]</p>
+<p>Here are some of the more interesting or significant changes made to the Java 
+  Development Tooling for the 2.1 release of Eclipse since 2.0:</p>
 <p><a href="#editor">Java Editor</a></p>
 <p><a href="#debug">Java Debugger</a></p>
 <p><a href="#refactor">Refactoring</a></p>
