Fixed CHKPII errors

--- a/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
+++ b/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
@@ -271,8 +271,8 @@
   <tr>
     <td width="20%" valign="top" align="right"><b>Special end character for resource name patterns</b></td>
     <td width="80%" valign="top" align="left">The <b>Open Resource</b> and <b>Go To &gt; Resource</b> dialogs support the 
-    end character '<'.  For example, if you want to see all resources that exactly match &quot;Test&quot;, use the end
-	character.  If the pattern does not end in '<', a '*' will be appended to the pattern. 
+    end character '&lt;'.  For example, if you want to see all resources that exactly match &quot;Test&quot;, use the end
+	character.  If the pattern does not end in '&lt;', a '*' will be appended to the pattern. 
 	Entering &quot;Test&quot; will show all resources starting with &quot;Test&quot;.</td>
   </tr>
   <tr>
