*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/tasks/tkeybindings.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tkeybindings.htm
@@ -8,23 +8,15 @@
 
 <BODY BGCOLOR="#ffffff">
 <H1>Changing the key bindings</H1>
-
 <p>
-You can choose between different key bindings.
+The function of the keyboard can be extensively customized in Eclipse.
 </p>
-
-<ol>
-  <li>
-    <p CLASS="Para">
-    Select <b>Window &gt; Preferences &gt; Workbench &gt; Editors</b>.
-    </li>
-  <li>
-    <p CLASS="Para">Select from one of the key bindings in the <b>Key bindings</b> list box.
-    </li>
-</ol>
-
+<p> 
+Select <b>Window &gt; Preferences &gt; Workbench &gt; Keys</b> for the Keys preference page, 
+where you can <a href="../concepts/accessibility/keyboardshortcuts.htm">assign key sequences</a> to many of the commands in Eclipse.
+</p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/accessibility/keyboardshortcuts.htm">Keyboard shortcuts for the Workbench, Java development tools, and the Debugger</a><br>
+<a href="../concepts/accessibility/keyboardshortcuts.htm">Keys</a><br>
 <a href="../concepts/accessibility/navigation.htm">Navigating the user interface by using the keyboard</a>
 </p>
 
