Simplified reference to pref page

--- a/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
+++ b/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
@@ -284,8 +284,8 @@
   <tr>
     <td width="20%" valign="top" align="right"><b>Creating path variables</b></td>
     <td width="80%" valign="top" align="left">You can define a path variable when you 
-    create a linked resource or you can use the <b>Window &gt; Preferences &gt; Workbench 
-    &gt; Linked Resources</b> preference page to define path variables.
+    create a linked resource or you can use the <b>Workbench &gt; Linked Resources</b> 
+    preference page to define path variables.
     <p align="center"><img border="0" src="images/path-vars.gif" alt="Path variables dialog" align="left"></p></td>
   </tr>
   <tr>
