*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-DetectingExistingLayout.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-DetectingExistingLayout.htm
@@ -45,6 +45,10 @@ package com.xyz;
     </li>
     <li>Click <strong>Finish</strong>.
     </li>
+    <li>
+    	You now have a Java project with a &quot;src&quot; folder which contains the sources of the &quot;Product&quot; directory.
+		<p><img src="../images/qs-DetectingExistingLayout3.gif" alt="Java perspective"></p>
+    </li>
 	</ol>
 	<p>
 		<em>Note: </em>This solution creates a &quot;.project&quot; file and a &quot;.classpath&quot; file in the 
