--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-OrganizingSources.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-OrganizingSources.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Starting a new Java Project
+      Organizing sources
     </title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -10,10 +10,13 @@
   </head>
   <body>
     <h1>
-      Starting a new Java Project
+      Organizing sources
     </h1>
-    <p>In this section, we will create a new Java project and explain the different components of a Java project. This will 
+    <p>In this section, you will create a new Java project and organize your sources in separate folders. This will 
     prepare you for handling more complex layouts.
+    </p>
+    <p>Let's assume you want to put your sources in one folder and your tests in another folder:
+       <p><img src="../images/qs-OrganizeSources1.gif" alt="Sources and tests folders"></p>
     </p>
 
 	<ol>
@@ -24,48 +27,34 @@
         <br>Then click <strong>Next</strong>.
       </li>
       <li>
-        On the next page, type &quot;MyProject&quot; in the <strong>Project name</strong> field and click <strong>Next</strong>.<br>
-       <p><img src="../images/qs-snjp1.gif" alt="Java Project Wizard"></p>
+        On the next page, type &quot;MyProject&quot; in the <strong>Project name</strong> field and click <strong>Next</strong>.
+       <p><img src="../images/qs-OrganizeSources2.gif" alt="Java Project Name Setting"></p>
       </li>
-      <li>From the Source tab, click <strong>Add Folder...</strong>.<br>
-       <p><img src="../images/qs-snjp2.gif" alt="Java Project Name Setting"></p>
+      <li>Click <strong>Add Folder...</strong>.
       </li>
-      <li>On the next dialog, click <strong>Create New Folder...</strong><br>
-        <p><img src="../images/qs-snjp3.gif" alt="Add Folder Settings"></p>
+      <li>On the next dialog, click <strong>Create New Folder...</strong>
      </li>
-    <li>Type &quot;src&quot; in the <strong>Folder name</strong> field and click <strong>OK</strong>.<br>
-    <blockquote>NOTE: If you want to use an existing folder outside of the workspace, select the 
-    checkbox <strong>Link to folder in the file system</strong> and browse to the desired folder.
-    </blockquote>
-        <p><img src="../images/qs-snjp4.gif" alt="Folder Name Settings"></p>
+    <li>Type &quot;sources&quot; in the <strong>Folder name</strong> field.
+       <p><img src="../images/qs-OrganizeSources3.gif" alt="Java Project Name Setting"></p>
     </li>
-    <li>Click <strong>OK</strong> again.
+	<li>Click <strong>OK</strong> twice to close the two dialogs.
+	</li>
+    <li>
+    	You will be prompted whether or not to remove the project as a source folder and update the build output
+	    folder to &quot;MyProject/bin&quot;. The builder will write the generated .class files to the output folder. 
+    	Click <strong>Yes</strong>.<br>
+        <p><img src="../images/qs-OrganizeSources4.gif" alt="Resulting Java Project Wizard"></p>
     </li>
-    <li>You will be prompted whether or not to remove the project as a source folder and update the build output
-    folder to &quot;MyProject/bin&quot;. The builder will write the generated .class file to the output folder and 
-    &quot;MyProject/bin&quot; will become the <i>default output folder for the project</i>. Click <strong>Yes</strong>.<br>
-        <p><img src="../images/qs-snjp5.gif" alt="Create New Java Project"></p>
-   </li>
-    <li>You will then be at this wizard.<br>
-        <p><img src="../images/qs-snjp6.gif" alt="Resulting Java Project Wizard"></p>
+    <li>
+    	To create the &quot;tests&quot; folder, repeat steps 4 to 7.
+	    <p><img src="../images/qs-OrganizeSources5.gif" alt="Resulting Java Project Wizard"></p>
     </li>
-    <li>If you want to set an individual output folder for each source folder, you need to select the checkbox <strong>Allow output folders for source
-    folders</strong>.
-    Specify the desired output folder by double-clicking on this new item.<br>
-        <p><img src="../images/qs-snjp7.gif" alt="Setting output folder per source folder"></p>
+    <li>Click <strong>Finish</strong>
     </li>
-    <li>To create multiple source folders, repeat steps 4 to 7.
-    <blockquote>NOTE: You may want to create all source folders at step 6, but be sure you select the project name for each source folder.
-    You will also need to select all the source folders you have created before confirming with <strong>OK</strong>.<br>
-        <p><img src="../images/qs-snjp8.gif" alt="Multiple source folders creation"></p>
-    </blockquote>
-    Here is the wizard again, with multiple source folders:<br>
-    <p><img src="../images/qs-snjp9.gif" alt="Multiple source folders"></p>
-    </li>
-    <li>You now have a new Java Project in which you can add source files. If you don't want the builder to clean up the output folders during
-    a full build, go to the <strong>Properties</strong> of your Java Project.
-    Select <strong>Java Compiler &gt; Use project settings &gt; Build path...</strong> and uncheck <strong>Scrub output folders on full build</strong>.<br>
-    <p><img src="../images/qs-snjp10.gif" alt="Setting scrubbing of output folder"></p>
+    <li>
+    	You now have a Java project with a &quot;sources&quot; and a &quot;tests&quot; folders. You can start adding classes
+    	to these folders or you can copy them using drag and drop.
+	    <p><img src="../images/qs-OrganizeSources6.gif" alt="Java perspective"></p>
     </li>
 	</ol>    
     <p>
