--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-WorkingWithExistingLayout1.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-WorkingWithExistingLayout1.htm
@@ -52,6 +52,10 @@
     </li>
     <li>Repeat these steps for  &quot;Product2&quot;.
     </li>
+    <li>
+    	You now have two Java projects which respectively contain the sources of &quot;Product1&quot; and &quot;Product2&quot;.
+		<p><img src="../images/qs-WorkingWithExistingLayout14.gif" alt="Java perspective"></p>
+    </li>
 	</ol>
 
     <p>
