--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-WorkingWithExistingLayout2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-WorkingWithExistingLayout2.htm
@@ -54,6 +54,10 @@
     </li>
     <li>Repeat these steps for  &quot;Product2&quot;, excluding &quot;com/xyz/product1/&quot; instead.
     </li>
+    <li>
+    	You now have two Java projects which respectively contain the sources of &quot;product1&quot; and &quot;product2&quot;.
+		<p><img src="../images/qs-WorkingWithExistingLayout23.gif" alt="Java perspective"></p>
+    </li>
 	</ol>
 		
     <p>
