--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-WorkingWithExistingLayout3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-WorkingWithExistingLayout3.htm
@@ -54,6 +54,11 @@
 	</li>
     <li>Click <strong>Finish</strong>.
     </li>
+    <li>
+    	You now have a Java project with a &quot;src&quot; folder and a &quot;tests&quot; folder which contain respectively 
+    	the &quot;JavaSourceFiles&quot; directory and the &quot;tests&quot; directory.
+		<p><img src="../images/qs-WorkingWithExistingLayout34.gif" alt="Java perspective"></p>
+    </li>
 	</ol>
 
     <p>
