--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-WorkingWithExistingLayout4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-WorkingWithExistingLayout4.htm
@@ -61,6 +61,11 @@
     </li>
     <li>Repeat these steps for &quot;Product2&quot;.
     </li>
+    <li>
+    	You now have two Java projects which respectively contain the sources of &quot;Product1&quot; and &quot;Product2&quot;
+    	and which are using the sources of &quot;CommonFramework&quot;.
+		<p><img src="../images/qs-WorkingWithExistingLayout45.gif" alt="Java perspective"></p>
+    </li>
 	</ol>
 	
     <p>
