*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/fontsandcolors.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/fontsandcolors.htm
@@ -74,7 +74,7 @@ these colors can be adjusted via the following preference pages:</p>
 </p>
 
 <p><img src="../../images/ngrelr.gif" alt="Related references" border="0" width="159" height="27"><br>
-<a href="keyboardshortcuts.htm">Keyboard shortcuts</a>
+<a href="keyboardshortcuts.htm">Keys</a>
 </p>
 
 <p>&nbsp;<br>
