--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
@@ -8,8 +8,11 @@
 <h1>Keys</h1>
 <p>
 The function of the keyboard can be extensively customized in Eclipse. Within Eclipse, 
-key strokes and key sequences are assigned to invoke particular commands. From the Keys
-preference page, one can view or change these assignments.
+key strokes and key sequences are assigned to invoke particular commands. 
+</p>
+<p>
+Select <b>Window &gt; Preferences &gt; Workbench &gt; Keys</b> for the Keys preference page.
+From here, you can view or change these assignments.
 </p>
 <h2>Key strokes, Key sequences, and Key bindings</h2>
 <p>
@@ -28,7 +31,7 @@ Eclipse supports key sequences of arbitrary lengths.
 <p>
 A 'key binding' is the assignment of a key sequence to a command.
 </p>
-<h2>Configuration</h2>
+<h2>Configurations</h2>
 <p>
 A 'configuration' is a set of key bindings. Eclipse includes two configurations:
 </p>
@@ -55,7 +58,7 @@ The user decides which configuration they are most comfortable using by changing
 keys preference page. If the user chooses the <em>Standard</em> configuration, all <em>Emacs</em> key bindings are ignored. If the user chooses
 the <em>Emacs</em> configuration, explicit emacs style key sequence assignments take precedence over any conflicting assignments in the <em>Standard</em> configuration.
 </p>
-<h2>Scope</h2>
+<h2>Scopes</h2>
 <p>
 Key bindings can vary based on the current context of Eclipse. 
 </p>
@@ -154,7 +157,6 @@ For this type of conflict, the rule is that the <code>Ctrl+X</code> key sequence
 <p><img src="../../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="accessmain.htm">Accessibility Features in Eclipse</a><br>
 <a href="../../tasks/tkeybindings.htm">Changing the key bindings</a><br>
-<a href="keyboardshortcuts.htm">Keyboard shortcuts</a><br>
 <a href="../chelpsys.htm">Online help system</a></p>
 <p><img src="../../images/ngrelr.gif" alt="Related references" width="159" height="27"><br>
 <a href="fontsandcolors.htm">Font and color settings using the Window Preferences</a></p>
