--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/accessmain.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/accessmain.htm
@@ -45,7 +45,7 @@
  <p><img src="../../images/ngrelt.gif" alt="Related tasks" border="0" width="159" height="27"><a href="navigation.htm"><br>
  Navigating the user interface using the keyboard</a></p>
  <p><img src="../../images/ngrelr.gif" alt="Related references" border="0" width="159" height="27"><br>
- <a href="keyboardshortcuts.htm">Keyboard shortcuts</a><br>
+ <a href="keyboardshortcuts.htm">Keys</a><br>
 <a href="fontsandcolors.htm">Font and color settings using the Window Preferences.</a></p>
 
  
