--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/navigation.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/navigation.htm
@@ -78,7 +78,7 @@
 <p><img src="../../images/ngrelc.gif" alt="Related concepts" border="0" width="159" height="27"><br>
  <a href="accessmain.htm">Accessibility Features in Eclipse</a><br>
  <a href="../../tasks/tkeybindings.htm">Changing the key bindings</a><br>
- <a href="keyboardshortcuts.htm">Keyboard shortcuts</a> <br>
+ <a href="keyboardshortcuts.htm">Keys</a> <br>
 <a href="../chelpsys.htm">Online help system</a></p>
  <p><img src="../../images/ngrelr.gif" alt="Related references" border="0" width="159" height="27"><br>
  <a href="fontsandcolors.htm">Font and color settings using the Window 
