Updated to XP screenshots

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-36a.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-36a.htm
@@ -32,20 +32,23 @@ access):</p>
   <li>The Preview shows the query details. Expand the <b>Query Settings</b>.</li>
   <li>For <b>Available Updates</b> query, select one or more installed feature
     to search for.
-    <br> <img align="top" border="0"
-       src="../images/Image35umd_prevusearchnew.jpg" alt="Available Updates Query">
-    </li>
+    <br>
+    <img
+       src="../images/Image35umd_prevusearchnew.gif" alt="Available Updates Query" width="594" height="474" border="0" align="top"> 
+  </li>
   <li>For <b>Regular Expression</b> query, specify the values you want
     to search for.
-    <br> <img align="top" border="0"
-       src="../images/Image35umd_prevusearchrx.jpg" alt="Regular Expression Query">
-    </li>
+    <br>
+    <img
+       src="../images/Image35umd_prevusearchrx.gif" alt="Regular Expression Query" width="583" height="392" border="0" align="top"> 
+  </li>
   <li>For <b>Plug-ins in features</b> query, use the Add or Delete buttons 
     to specify the plug-ins to search for. When adding plug-ins to the list
     enter the plug-in identifier and version into the Add dialog.
-    <br> <img align="top" border="0"
-       src="../images/Image35umd_prevusearchplugin.jpg" alt="Plug-ins in Features Query">
-    </li>  
+    <br>
+    <img
+       src="../images/Image35umd_prevusearchplugin.gif" alt="Plug-ins in Features Query" width="583" height="392" border="0" align="top"> 
+  </li>  
   <li>Expand the <b>Scope Settings</b> and select the targets to search.</li>
     <ul>
       <li><b>Include My Computer in search</b> will cause the selected
