--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12c.htm
@@ -20,8 +20,7 @@ Select the Navigator view. Its title bar will be highlighted (according to your
 operating system's color scheme).</P>
   </li>
   <li>
-    <P CLASS="Para"> Choose <b>Go To &gt; Resource...</b> from the Navigate menu in the 
-      toolbar.</P>
+    <P CLASS="Para">From the pull-down menu choose <b>Navigate &gt; Go To &gt; Resource...</b>.</P>
   </li>
   <li>
 <P CLASS="Para">In the Go To Resource dialog type &quot;JanesF&quot; into
@@ -32,7 +31,7 @@ matches based on what you have entered so far.</P>
   <li>
 <P CLASS="Para">
 Select JanesFile.txt from the <b>Matching Resources</b>
-field and click OK. </P>
+field and click OK or simply press Enter. </P>
   </li>
   <li>
 <p CLASS="Para">
