Improve what's new

--- a/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
@@ -48,12 +48,13 @@ Eclipse since 2.0:</p>
     </td>
   </tr>
   <tr>
-    <td width="20%" valign="top" align="right"><b>Calmer editor linking behavior</b></td>
+    <td width="20%" valign="top" align="right"><b>Improved editor linking behavior</b></td>
     <td width="80%" valign="top" align="left">The resource Navigator view is no
       longer tightly linked to the currently open editor by default. This means
       that closing or switching editors does not change the selection in the
       Navigator view, which many found disorienting. Toggle the <b>Link with
-      Editor</b> button in the Navigator view toolbar to tie the Navigator view
+      Editor</b> button in the view toolbar to tie the Navigator view (or
+      similar views)
       to always show the current file being edited.
       <p align="center"><img border="0" src="images/link-with-editor.gif" width="427" height="128" alt="Package explorer linked with editor"></p>
     </td>
@@ -65,7 +66,7 @@ Eclipse since 2.0:</p>
       action provides a uniform way to navigate from an open editor to a view
       showing the corresponding file (e.g., in the resource Navigator view), or
       from a file selected in one view to the same file in a different view
-      (e.g., from the resource Navigator view to the Java Package Explorer
+      (e.g., from the resource Navigator view to the Package Explorer
       view).
       <p align="center"><img border="0" src="images/show-in.gif" width="437" height="280" alt="Navigate > Show In menu"></p>
     </td>
@@ -90,7 +91,7 @@ Eclipse since 2.0:</p>
     <td width="20%" valign="top" align="right"><b>External tools &amp; launch
       configurations</b></td>
     <td width="80%" valign="top" align="left">
-      <p>External tools have been completely migrated to use launch
+      <p>External tools now use debugger-style launch
       configurations. The <b>Run &gt; External Tools</b> drop-down menu now
       appears and works in the same fashion as the run and debug drop-down
       menus. The output from external tools now appears in the standard Console
@@ -104,9 +105,9 @@ Eclipse since 2.0:</p>
     <td width="80%" valign="top" align="left">There is now improved support for
       dealing with externally imposed restrictions on how the files in a
       workspace project are laid out in the local file system. When creating a
-      folder (or file), you can link it to an existing location in the file
+      folder or file, you can link it to an existing location in the file
       system outside of the workspace. This is done using the Advanced section
-      on the New Folder (and New File) wizards. These <a href="../concepts/concepts-13.htm">linked
+      on the New Folder and New File wizards. These <a href="../concepts/concepts-13.htm">linked
       resources</a> are useful for integrating with external libraries or source
       code directories that cannot readily be copied into an Eclipse workspace.
   </tr>
