*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
@@ -10,10 +10,6 @@
 The function of the keyboard can be extensively customized in Eclipse. Within Eclipse, 
 key strokes and key sequences are assigned to invoke particular commands. 
 </p>
-<p>
-Select <b>Window &gt; Preferences &gt; Workbench &gt; Keys</b> for the Keys preference page.
-From here, you can view or change these assignments.
-</p>
 <h2>Key strokes, Key sequences, and Key bindings</h2>
 <p>
 A 'key stroke' is the pressing of a key on the keyboard, while optionally holding down one 
@@ -92,7 +88,10 @@ The current platform and locale is determined when Eclipse starts, and does not 
 <h2>Customizing Key bindings</h2>
 <p>
 With multi-stroke key sequences, configurations, and scopes, there are a lot of things to keep in mind when customizing key bindings.
-To make things easier, all key customization is done on the Keys preference page:
+To make things easier, all key customization is done on the Keys preference page.
+</p>
+<p>
+Select <b>Window &gt; Preferences &gt; Workbench &gt; Keys</b> for the Keys preference page.
 </p>
 <p> <img src="../../images/keys1.gif" alt="Keys preference page, showing <em>Emacs</em> as the active configuration, and the <code>Close</code> command selected" width="591" height="543"> 
 </p>
@@ -124,7 +123,7 @@ By selecting the command <code>Cut</code>, we can see the results of our change.
 Perhaps we choose to assign another key to <code>Cut</code> in the <em>Emacs</em> 
 configuration, say <code>Ctrl+Alt+W</code>. Adding this in the previous manner 
 above produces the following. Notice the small 'plus' graphic <img src="../../images/plus.gif" alt="Small graphic representing 'plus'"> 
-indicates that the key binding was added by the user, and was previously unassigned: 
+indicating that the key binding was added by the user, and was previously unassigned: 
 <p> <img src="../../images/keys5.gif" alt="Keys preference page, adding the key sequence <code>Ctrl+Alt+W</code> to <code>Close</code>" width="574" height="450"></p>
 <h2>The Dynamic Nature of Key bindings</h2>
 <p>
