--- a/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
@@ -63,7 +63,7 @@ Eclipse since 2.0:</p>
     <td width="20%" valign="top" align="right"><b>Better UI for editor / view
       synchronization</b></td>
     <td width="80%" valign="top" align="left">The new <b>Navigate &gt; Show In</b>
-      action provides a uniform way to navigate from an open editor to a view
+      command provides a uniform way to navigate from an open editor to a view
       showing the corresponding file (e.g., in the resource Navigator view), or
       from a file selected in one view to the same file in a different view
       (e.g., from the resource Navigator view to the Package Explorer
