--- a/bundles/org.eclipse.platform.doc.user/concepts/cworkset.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cworkset.htm
@@ -29,7 +29,7 @@ the set of elements that are searched. </P>
 
 <P CLASS="Para" Label=Type>
 Different views provide different means to specify a working set. However, they 
-all use the following working set selection dialog to manage existing working 
+typically use the following working set selection dialog to manage existing working 
 sets and to create new working sets.
 </P>
 
@@ -44,8 +44,8 @@ sets and to create new working sets.
 
 <P CLASS="Para" Label=Type>
 When you create a new working set you may be able to choose from different types
-of working sets. In the example below you can create a resource working set or a
-Java working set.
+of working sets. In the example below you can create a resource working set, a
+Java working set or a help working set.
 </P>
 
 <P CLASS="Para" Label=Type>
